@@ -13,25 +13,27 @@ describe DataMapper::Adapters::Sql::Commands::LoadCommand do
   
 end
 
-describe DataMapper::Adapters::Sql::Commands::AdvancedLoadCommand do
+return unless ENV['ADAPTER'].nil? || ENV['ADAPTER'] == 'mysql'
   
+describe DataMapper::Adapters::Sql::Commands::AdvancedLoadCommand do
+
   def loader_for(klass, options = {})
     session = database
     DataMapper::Adapters::Sql::Commands::AdvancedLoadCommand.new(session.adapter, session, klass, options)
   end
-  
+
   it "should return a simple select statement for a given class" do
     loader_for(Zoo).to_sql.should == 'SELECT `id`, `name` FROM `zoos`'
   end
-  
+
   it "should include only the columns specified in the statement" do
     loader_for(Zoo, :select => [:name]).to_sql.should == 'SELECT `name` FROM `zoos`'
   end
-  
+
   it "should optionally include lazy-loaded columns in the statement" do
     loader_for(Zoo, :include => :notes).to_sql.should == 'SELECT `id`, `name`, `notes` FROM `zoos`'
   end
-  
+
   it "should join associations in the statement" do
     loader_for(Zoo, :include => :exhibits).to_sql.should == <<-EOS.compress_lines
       SELECT `zoos`.`id`, `zoos`.`name`,
@@ -40,7 +42,7 @@ describe DataMapper::Adapters::Sql::Commands::AdvancedLoadCommand do
       JOIN `exhibits` ON `exhibits`.`zoo_id` = `zoos`.`id`
     EOS
   end
-  
+
   it "should join has and belongs to many associtions in the statement" do
     loader_for(Animal, :include => :exhibits).to_sql.should == <<-EOS.compress_lines
       SELECT `animals`.`id`, `animals`.`name`,
@@ -48,8 +50,8 @@ describe DataMapper::Adapters::Sql::Commands::AdvancedLoadCommand do
       FROM `animals`
       JOIN `animals_exhibits` ON `animals_exhibits`.`animal_id` = `animals`.`id`
       JOIN `exhibits` ON `exhibits`.`id` = `animals_exhibits`.`exhibit_id`
-    
+  
     EOS
   end
-  
-end if ENV['ADAPTER'].nil? || ENV['ADAPTER'] == 'mysql'
+
+end
